[package]
name = "kvdb-nomtdb"
description = "KeyValue DB implementation for Nearly Optimal Merkle Trie - Schema and Database"
version = "0.1.0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
sha2 = "0.10.6"
criterion = { version = "0.5.1", optional = true }
kvdb = "0.13.0"
nomt = { path = "../nomt", features = [] }
